--- a/html/about.html
+++ b/html/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <link rel="stylesheet" type="text/css" href="./css/about.style.css">
-        <link rel="stylesheet" type="text/css" href="./css/main.css">
+        <link rel="stylesheet" type="text/css" href="../css/about.style.css">
+        <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
     <body>
         <div class="header">
@@ -11,18 +11,18 @@
             </div>
             <div>
                 <ul class="allmenu">
-                    <li><a href="blog.html">Home</a></li>
-                    <li><a href="about.html">About me</a></li>
-                    <li class="menu_1"><a href="선택활동.html">선택활동</a>
+                    <li><a href="../html/blog.html">Home</a></li>
+                    <li><a href="../html/about.html">About me</a></li>
+                    <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                         <ul class="sub_menu_1">
-                            <li><a href="#">22-1 A:Change Maker</a></li>
+                            <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
                             <li><a href="#">22-2 A:Web Manager</a></li>
-                            <li><a href="#">22-1 B:홀리워크</a></li>
+                            <li><a href="../html/홀리워크.html">22-1 B:홀리워크</a></li>
                             <li><a href="#">22-2 B:End Poverty</a></li>
                             <li><a href="#">22-2 C:Active Biblical Geology</a></li>
                         </ul>
                     </li>
-                    <li class="menu_1"><a href="#">창의활동</a>
+                    <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="#">syntax error()</a></li>
                             <li><a href="#">병천 독립운동거리 조성</a></li>
@@ -30,7 +30,7 @@
                     </li>
                     <li class="menu_1"><a href="#">이색활동</a>
                         <ul class="sub_menu_1">
-                            <li><a href="carve.html">빚음</a></li>
+                            <li><a href="../html/carve.html">빚음</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -39,7 +39,7 @@
         <!-- ---------------------------------------------------------------- -->
         <div class="main_text">
             <div class="applePie">
-                <img src='./photo/Dreamy01.jpeg' id="my_photo">
+                <img src='../photo/Dreamy01.jpeg' id="my_photo">
                 <p class="name">신우진<br>Dreamy 4기</p>
             </div>
             <div class="vision">
@@ -52,6 +52,14 @@
                 <li>봉사하는 사람 : 힘든 이웃을 위해 하는 일을 아까워하지 않는다.</li>
                 <li>글로벌 인재 : 내가 잘하는 것을 찾고 그 역량을 키우기 위해 노력한다.</li>
             </ul>
+            <br/>
         </div>
+        <footer>
+            <p>
+                <br/><br/><span>저자 : Shin WooJin</span><br/>
+                <span>이메일 : tls36tls@gmail.com</span><br/>
+                <span>Copyright 2022. Shin WooJin. All Rights Reserved.</span>
+            </p>
+        </footer>
     </body>
 </html>
