--- a/html/blog.html
+++ b/html/blog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <link rel="stylesheet" type="text/css" href="./css/style.css">
-        <link rel="stylesheet" type="text/css" href="./css/main.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
     <body>
         <div class="intro_bg">
@@ -12,18 +12,18 @@
                 </div>
                 <div>
                     <ul class="allmenu">
-                        <li><a href="blog.html">Home</a></li>
-                        <li><a href="about.html">About me</a></li>
-                        <li class="menu_1"><a href="선택활동.html">선택활동</a>
+                        <li><a href="../html/blog.html">Home</a></li>
+                        <li><a href="../html/about.html">About me</a></li>
+                        <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                             <ul class="sub_menu_1">
-                                <li><a href="#">22-1 A:Change Maker</a></li>
+                                <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
                                 <li><a href="#">22-2 A:Web Manager</a></li>
-                                <li><a href="#">22-1 B:홀리워크</a></li>
+                                <li><a href="../html/홀리워크.html">22-1 B:홀리워크</a></li>
                                 <li><a href="#">22-2 B:End Poverty</a></li>
                                 <li><a href="#">22-2 C:Active Biblical Geology</a></li>
                             </ul>
                         </li>
-                        <li class="menu_1"><a href="#">창의활동</a>
+                        <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
                             <ul class="sub_menu_1">
                                 <li><a href="#">syntax error()</a></li>
                                 <li><a href="#">병천 독립운동거리 조성</a></li>
@@ -31,7 +31,7 @@
                         </li>
                         <li class="menu_1"><a href="#">이색활동</a>
                             <ul class="sub_menu_1">
-                                <li><a href="carve.html">빚음</a></li>
+                                <li><a href="../html/carve.html">빚음</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -41,6 +41,13 @@
                 <h4><b>Hi, my name is WooJin</b></h4>
             </div>
         </div>
+        <footer>
+            <p>
+                <br/><br/><span>저자 : Shin WooJin</span><br/>
+                <span>이메일 : tls36tls@gmail.com</span><br/>
+                <span>Copyright 2022. Shin WooJin. All Rights Reserved.</span>
+            </p>
+        </footer>
     </body>
 </html>
 
