--- a/html/홀리워크.html
+++ b/html/홀리워크.html
@@ -11,7 +11,7 @@
             </div>
             <div>
                 <ul class="allmenu">
-                    <li><a href="../html/blog.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
                     <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                         <ul class="sub_menu_1">
@@ -40,19 +40,17 @@
             <div class="intro_img">
                 <h2>HOLY WORK</h2>
             </div>
-            <div>
                 <h3>활동 개요</h3>
                 <p>본 수업에서는 하나님이 우리를 만드신 것과 같이 리도 무언가를 만들며 하나님을 닮은 창조성을 발휘한다.</p>
                 <h3>활동 내용</h3>
                 <div class="created">
-                    <a href="#"><img src="../photo/IMG_6388.HEIC" class="img"></a>
-                    <a href="#"><img src="../photo/IMG_6388.HEIC" class="img"></a>
-                    <a href="#"><img src="../photo/IMG_6388.HEIC" class="img"></a>
+                    <a href="../html/홀리워크_십자가.html"><img src="../photo/IMG_6388.HEIC" class="img"></a>
+                    <a href="../html/홀리워크_우드슬렙.html"><img src="../photo/IMG_6388.HEIC" class="img"></a>
+                    <a href="../html/홀리워크_야외화덕.html"><img src="../photo/IMG_6388.HEIC" class="img"></a>
                 </div>
                 <p class="img_text"><a href="../html/홀리워크_십자가.html">십자가</a></p>
-                <p class="img_text"><a href="#">우드슬렙</a></p>
-                <p class="img_text"><a href="#">야외 화덕</a></p>
-            </div>
+                <p class="img_text"><a href="../html/홀리워크_우드슬렙.html">우드슬랩</a></p>
+                <p class="img_text"><a href="../html/홀리워크_야외화덕.html">야외 화덕</a></p>
         </div>
         <footer>
             <p>
