--- a/html/carve.html
+++ b/html/carve.html
@@ -11,7 +11,7 @@
             </div>
             <div>
                 <ul class="allmenu">
-                    <li><a href="../html/blog.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
                     <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                         <ul class="sub_menu_1">
