--- a/html/홀리워크_십자가.html
+++ b/html/홀리워크_십자가.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <link rel="stylesheet" type="text/css" href="../css/about.style.css">
+        <link rel="stylesheet" type="text/css" href="../css/홀리워크_십자가.style.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
     <body>
@@ -11,7 +11,7 @@
             </div>
             <div>
                 <ul class="allmenu">
-                    <li><a href="../html/blog.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
                     <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                         <ul class="sub_menu_1">
@@ -37,16 +37,38 @@
             </div>
         </div>
         <div class="main_text">
-            <a href="../html/홀리워크.html">뒤로가기</a>
-            <h3>제작 과정</h3>
-            <div>
-                <img src="../photo/IMG_6388.HEIC" class="process">
+            <div class="head">
+                <h3>제작 과정</h3>
+                <a href="../html/홀리워크.html">뒤로가기</a>
             </div>
-            <p>1. 나무를 구매해 껍질을 벗기고 말린다.</p>
-            <p>2. 샌더로 표면을 부드럽게 만든다.</p>
-            <p>3. 나무 2개를 십자가 모양으로 결합한다</p>
-            <p>4. 밑동에 구멍을 판다.</p>
-            <p>5. 두 나무를 결합한다.</p>
+            <div class="all_process">
+                <div class="process">
+                    <img src="../photo/IMG_4652.jpeg" class="process_img">
+                    <p class="process_text">1. 나무를 구매해 껍질을 벗기고 말린다.</p>
+                </div>
+                <div class="process">
+                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <p class="process_text">2. 샌더로 표면을 부드럽게 만든다.</p>
+                </div>
+                <div class="process">
+                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <p class="process_text">3. 나무 2개를 십자가 모양으로 결합한다.</p>
+                </div>
+                <div class="process">
+                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <p class="process_text">4. 밑동에 구멍을 판다.</p>
+                </div>
+                <div>                
+                <div class="process">
+                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <p class="process_text">5. 두 나무를 결합한다.</p>
+                </div>
+            </div>
+            <div class="bottom_nav">
+                <p><a href="../html/홀리워크.html">뒤로가기</a></p>
+                <p><a href="../html/홀리워크_우드슬렙.html">우드슬랩</a></p>
+                <p><a href="../html/홀리워크_야외화덕.html">야외 화덕</a></p>
+            </div>
         </div>
         <footer>
             <p>
