--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div>
                     <ul class="allmenu">
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="../html/about.html">About me</a></li>
+                        <li><a href="./html/about.html">About me</a></li>
                         <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                             <ul class="sub_menu_1">
                                 <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
