--- a/html/홀리워크.html
+++ b/html/홀리워크.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
+        <link rel="stylesheet" type="text/css" href="../css/main.css">        
         <link rel="stylesheet" type="text/css" href="../css/홀리워크.style.css">
-        <link rel="stylesheet" type="text/css" href="../css/main.css">
+
     </head>
     <body>
         <div class="header">
@@ -16,7 +17,7 @@
                     <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
-                            <li><a href="#">22-2 A:Web Manager</a></li>
+                            <li><a href="../html/web_mannager.html">22-2 A:Web Manager</a></li>
                             <li><a href="#">22-1 B:홀리워크</a></li>
                             <li><a href="#">22-2 B:End Poverty</a></li>
                             <li><a href="#">22-2 C:Active Biblical Geology</a></li>
@@ -24,8 +25,8 @@
                     </li>
                     <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
                         <ul class="sub_menu_1">
-                            <li><a href="#">syntax error()</a></li>
-                            <li><a href="#">병천 독립운동거리 조성</a></li>
+                            <li><a href="../html/syntaxError().html">syntax error()</a></li>
+                            <li><a href="../html/병천독립운동.html">병천 독립운동거리 조성</a></li>
                         </ul>
                     </li>
                     <li class="menu_1"><a href="#">이색활동</a>
@@ -40,17 +41,30 @@
             <div class="intro_img">
                 <h2>HOLY WORK</h2>
             </div>
+            <div class="intro">
                 <h3>활동 개요</h3>
-                <p>본 수업에서는 하나님이 우리를 만드신 것과 같이 리도 무언가를 만들며 하나님을 닮은 창조성을 발휘한다.</p>
-                <h3>활동 내용</h3>
-                <div class="created">
-                    <a href="../html/홀리워크_십자가.html"><img src="../photo/IMG_6388.HEIC" class="img"></a>
-                    <a href="../html/홀리워크_우드슬렙.html"><img src="../photo/IMG_6388.HEIC" class="img"></a>
-                    <a href="../html/홀리워크_야외화덕.html"><img src="../photo/IMG_6388.HEIC" class="img"></a>
+                <p>이 수업은 ‘Holy work ; 거룩한 일, Holy walk ; 거룩한 발걸음’ 을 의미한다.
+                    창조주께서 인간 안에 내재하게 하신 창조성을 실현하고 자연을 거울삼아 사물과 자아의 본질을 이해하고 표현하는 활동으로써 ‘노작’에 참여하는 수업이다.
+                    또한 창조의 원리이자 인간에게 주신 소명으로써 ‘노동’의 가치와 즐거움을 이해하고 인간의 전인적 성장의 기반이 되는 정신과 신체의 작업을 중심으로 활동하는 수업으로 토목, 목공, 건축, 농사 등의 영역에서 학생들의 창의적이고 자발적인 계획과 참여를 통해 진행되는 수업이다. 이번 학기에는 십자가, 우드슬랩, 화덕을 제작했다.</p>
+            </div>
+            <h3>활동 내용</h3>
+            <div class="created">
+                <div>
+                    <a href="../html/홀리워크_십자가.html"><img src="../photo/DSC06167.jpg" class="img1"></a>
+                    <br/>
+                    <p class="img_text"><a href="../html/홀리워크_십자가.html">십자가</a></p>
                 </div>
-                <p class="img_text"><a href="../html/홀리워크_십자가.html">십자가</a></p>
-                <p class="img_text"><a href="../html/홀리워크_우드슬렙.html">우드슬랩</a></p>
-                <p class="img_text"><a href="../html/홀리워크_야외화덕.html">야외 화덕</a></p>
+                <div class="created_2">
+                    <a href="../html/홀리워크_우드슬렙.html"><img src="../photo/완성 2.png" class="img2"></a>
+                    <br/>
+                    <p class="img_text"><a href="../html/홀리워크_우드슬렙.html">우드슬랩</a></p>
+                </div>
+                <div class="created_3">
+                    <a href="../html/홀리워크_야외화덕.html"><img src="../photo/IMG_6388.HEIC" class="img3"></a>
+                    <br/>
+                    <p class="img_text"><a href="../html/홀리워크_야외화덕.html">야외 화덕</a></p>
+                </div>
+            </div>
         </div>
         <footer>
             <p>
