--- a/html/홀리워크_십자가.html
+++ b/html/홀리워크_십자가.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <link rel="stylesheet" type="text/css" href="../css/홀리워크_십자가.style.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="../css/홀리워크_십자가.style.css">
     </head>
     <body>
         <div class="header">
@@ -11,12 +11,12 @@
             </div>
             <div>
                 <ul class="allmenu">
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
                     <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
-                            <li><a href="#">22-2 A:Web Manager</a></li>
+                            <li><a href="../html/web_mannager.html">22-2 A:Web Manager</a></li>
                             <li><a href="../html/홀리워크.html">22-1 B:홀리워크</a></li>
                             <li><a href="#">22-2 B:End Poverty</a></li>
                             <li><a href="#">22-2 C:Active Biblical Geology</a></li>
@@ -24,8 +24,8 @@
                     </li>
                     <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
                         <ul class="sub_menu_1">
-                            <li><a href="#">syntax error()</a></li>
-                            <li><a href="#">병천 독립운동거리 조성</a></li>
+                            <li><a href="../html/syntaxError().html">syntax error()</a></li>
+                            <li><a href="../html/병천독립운동.html">병천 독립운동거리 조성</a></li>
                         </ul>
                     </li>
                     <li class="menu_1"><a href="#">이색활동</a>
@@ -47,20 +47,20 @@
                     <p class="process_text">1. 나무를 구매해 껍질을 벗기고 말린다.</p>
                 </div>
                 <div class="process">
-                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <img src="../photo/십자가센딩.jpg" class="process_img">
                     <p class="process_text">2. 샌더로 표면을 부드럽게 만든다.</p>
                 </div>
                 <div class="process">
-                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <img src="../photo/엑스 결합.jpg" class="process_img">
                     <p class="process_text">3. 나무 2개를 십자가 모양으로 결합한다.</p>
                 </div>
                 <div class="process">
-                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <img src="../photo/나무구멍.jpg" class="process_img">
                     <p class="process_text">4. 밑동에 구멍을 판다.</p>
                 </div>
                 <div>                
                 <div class="process">
-                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <img src="../photo/나무결합.jpg" class="process_img">
                     <p class="process_text">5. 두 나무를 결합한다.</p>
                 </div>
             </div>
