--- a/html/홀리워크_야외화덕.html
+++ b/html/홀리워크_야외화덕.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <link rel="stylesheet" type="text/css" href="../css/홀리워크_야외화덕.style.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="../css/홀리워크_야외화덕.style.css">
     </head>
     <body>
         <div class="header">
@@ -11,12 +11,12 @@
             </div>
             <div>
                 <ul class="allmenu">
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
                     <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
-                            <li><a href="#">22-2 A:Web Manager</a></li>
+                            <li><a href="../html/web_mannager.html">22-2 A:Web Manager</a></li>
                             <li><a href="../html/홀리워크.html">22-1 B:홀리워크</a></li>
                             <li><a href="#">22-2 B:End Poverty</a></li>
                             <li><a href="#">22-2 C:Active Biblical Geology</a></li>
@@ -24,8 +24,8 @@
                     </li>
                     <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
                         <ul class="sub_menu_1">
-                            <li><a href="#">syntax error()</a></li>
-                            <li><a href="#">병천 독립운동거리 조성</a></li>
+                            <li><a href="../html/syntaxError().html">syntax error()</a></li>
+                            <li><a href="../html/병천독립운동.html">병천 독립운동거리 조성</a></li>
                         </ul>
                     </li>
                     <li class="menu_1"><a href="#">이색활동</a>
@@ -48,18 +48,18 @@
                     <a href="https://app.sketchup.com/share/tc/asia/iQTdkQnhNs8?stoken=3hJQkiO5P108wcNYvDi-q-5SgHS7QwP787FQZ8DqqlvADTU_91Ip-23aF5-5MJJ8&source=web"  target='_blank'>모델링 보러가기</a>
                 </div>
                 <div class="process">
-                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <img src="../photo/재료정리.png" class="process_img">
                     <p class="process_text">2. 만드는데 필요한 재료를 단계별로 정리한다.</p>
                     <a class="df" href="https://docs.google.com/document/d/1cf_DfXXsCzJDzIsH9f2KD-7Sg15pzcteiXbb7Lt49BE/edit?usp=sharing"  target='_blank'>재료 보러가기</a>
                 </div>
                 <div class="process">
-                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <iframe class="process_img" height="480" src="https://www.youtube.com/embed/NN0fWpk9a80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <!-- 영상 -->
                     <p class="process_text">3. 콘크리트 기초, 밑단, 상판, 돔, 입구, 마감작업 순서로 만든다.</p>
-                    <a href="https://docs.google.com/document/d/1s5_RVWk9AR-sG-AnbbLN2A4cK9Enkvb_ugOVoQdK1RU/edit?usp=sharing"  target='_blank'>제작 과정 보러가기</a>
+                    <a href="https://docs.google.com/document/d/1cf_DfXXsCzJDzIsH9f2KD-7Sg15pzcteiXbb7Lt49BE/edit?usp=sharing"  target='_blank'>제작 과정 보러가기</a>
                 </div>
                 <div class="process">
-                    <img src="../photo/IMG_6388.HEIC" class="process_img">
+                    <img src="../photo/주변 정리.jpg" class="process_img">
                     <p class="process_text">4. 주변을 정리하고 파쇄석을 깐다.</p>
                 </div>
                 <div class="process">
