--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
                     <ul class="allmenu">
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./html/about.html">About me</a></li>
-                        <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
+                        <li class="menu_1"><a href="./html/선택활동.html">선택활동</a>
                             <ul class="sub_menu_1">
-                                <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
+                                <li><a href="./html/change_maker.html">22-1 A:Change Maker</a></li>
                                 <li><a href="#">22-2 A:Web Manager</a></li>
-                                <li><a href="../html/홀리워크.html">22-1 B:홀리워크</a></li>
+                                <li><a href="./html/홀리워크.html">22-1 B:홀리워크</a></li>
                                 <li><a href="#">22-2 B:End Poverty</a></li>
                                 <li><a href="#">22-2 C:Active Biblical Geology</a></li>
                             </ul>
                         </li>
-                        <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
+                        <li class="menu_1"><a href="./html/창의활동.html">창의활동</a>
                             <ul class="sub_menu_1">
-                                <li><a href="#">syntax error()</a></li>
-                                <li><a href="#">병천 독립운동거리 조성</a></li>
+                                <li><a href="./html/syntaxError().html">syntax error()</a></li>
+                                <li><a href="./html/병천독립운동.html">병천 독립운동거리 조성</a></li>
                             </ul>
                         </li>
                         <li class="menu_1"><a href="#">이색활동</a>
                             <ul class="sub_menu_1">
-                                <li><a href="../html/carve.html">빚음</a></li>
+                                <li><a href="./html/carve.html">빚음</a></li>
                             </ul>
                         </li>
                     </ul>
