--- a/html/Active.html
+++ b/html/Active.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <link rel="stylesheet" type="text/css" href="../css/carve.style.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="../css/Active.style.css">
     </head>
     <body>
         <div class="header">
@@ -36,18 +36,28 @@
                 </ul>
             </div>
         </div>
-        <!-- ---------------------------------------------------------------- -->
         <div class="main_text">
-            <div class="carve">
-                <object type="application/pdf" data="../빚음 필요한 무언가 대화형.pdf" width="100%" height="702">
-                    <embed type="application/pdf" data="../빚음 필요한 무언가 대화형.pdf" width="100%" height="702">
-                        <p>pdf 로딩에 실패했습니다.</p>
-                </object>
+            <div class="intro_img">
+                <h2>Active Biblical Geology</h2>
+            </div>
+            <div>
+                <div class="intro">
+                    <h3>활동 개요</h3>
+                    <p>
+                        하나님의 말씀의 많은 부분에서 오늘을 살아가는 우리들의 터전인 이 땅에 관하여 언급하고 있다. 믿음을 바위 돌 반석으로 표현하고 있으며 믿음의 조상 아브라함을 젖과 꿀이 흐르는 가나안 땅으로 가라고 명령하였다. 본 활동을 통해 땅을 창조하신 하나님 말씀과 현대 과학적 지식의 상이점을 분석하여 믿음의 도구로 재해석하는 훈련을 하고자 한다. 지질학의 역사를 통해, 오늘날 조명 받는 6000년 젊은 지구론과 46억년의 긴 지구 나이 사이의 과학자들의 견해 차이를 분석해 보고 믿음의 눈을 가진 사람들은 하나님의 창조물을 어떤 관점에서 연구하고 다가가야 하는지 조명해 본다. 
+                    </p>
+                </div>
+                <div class="created">
+                    <h3>제작물</h3>
+                    <p><a href="https://docs.google.com/document/d/1T1rvttumo9JjkvnduUoLMZiEm-DjNi1bmLUOuBS7RkQ/edit?usp=sharing" target='_blank'>1. 성경 바위 시간 정리</a></p>
+                    <p><a href="https://docs.google.com/presentation/d/1ej6iZrRyXK1hLQt1wjqBjfraT_9pK29hH4wIcgfB2YY/edit?usp=sharing" target='_blank'>2. 3P 발표 PPT</a></p>
+                </div>
+                <br/>
             </div>
         </div>
         <footer>
             <p>
-                <br/><br/><span>저자 : Shin WooJin</span><br/>
+                <br/><span>저자 : Shin WooJin</span><br/>
                 <span>이메일 : tls36tls@gmail.com</span><br/>
                 <span>Copyright 2022. Shin WooJin. All Rights Reserved.</span>
             </p>
