--- a/html/End_poverty.html
+++ b/html/End_poverty.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <link rel="stylesheet" type="text/css" href="../css/carve.style.css">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <link rel="stylesheet" type="text/css" href="../css/end.style.css">
     </head>
     <body>
         <div class="header">
@@ -36,18 +36,29 @@
                 </ul>
             </div>
         </div>
-        <!-- ---------------------------------------------------------------- -->
         <div class="main_text">
-            <div class="carve">
-                <object type="application/pdf" data="../빚음 필요한 무언가 대화형.pdf" width="100%" height="702">
-                    <embed type="application/pdf" data="../빚음 필요한 무언가 대화형.pdf" width="100%" height="702">
-                        <p>pdf 로딩에 실패했습니다.</p>
-                </object>
+            <div class="intro_img">
+                <h2>End Poverty</h2>
+            </div>
+            <div>
+                <div class="intro">
+                    <h3>활동 개요</h3>
+                    <p>
+                        예수의 십자가 다음으로 이 땅에서 진행한 사역은 가난한 자에게 복음을 전하며, 병자를 고치는 것이었다. 이땅에 임재할 하나님 나라를 꿈꾸는 우리 기독교인에게 이 땅에 존재하는 빈곤은 형제를 돌아보지 못하는 부끄러운 일면이다. 우리는 이 빈곤의 해결을 위해 빈곤을 공부하며, 국제사회의 다양한 시도와 실패 및 성공사례를 연구한다. 또한 지속가능한 빈곤해결을 위해 물질적인 지원에만 한정되었던 기존의 구제 패러다임을 벗어나 빈곤한 자들의 이야기를 듣고 그들의 입장에서 빈곤을 생각하며, 그들이 빈곤해결의 주체자로 설 수 있도록 돕는다.
+                    </p>
+                </div>
+                <div class="created">
+                    <h3>제작물</h3>
+                    <p><a href="https://docs.google.com/presentation/d/1z39RWGihCnysyV6dj05oLYd1_Ah7t9KecJowfiJi034/edit?usp=sharing" target='_blank'>1. 빈곤 정의 PPT</a></p>
+                    <p><a href="https://docs.google.com/document/d/149Q3lM-8De6gCQJlOF8E2lcg72RvSBpbCo-lS1I4tL8/edit?usp=sharing" target='_blank'>2. 냉정한 이타주의자 발표 문서</a></p>
+                    <p><a href="https://docs.google.com/presentation/d/1-8Cw7m-gxZ73TcnoBwXzGnUe_tfchUXQ_GxutKxbcPE/edit?usp=sharing" target='_blank'>3. 3P PPT</a></p>
+                </div>
+                <br/>
             </div>
         </div>
         <footer>
             <p>
-                <br/><br/><span>저자 : Shin WooJin</span><br/>
+                <br/><span>저자 : Shin WooJin</span><br/>
                 <span>이메일 : tls36tls@gmail.com</span><br/>
                 <span>Copyright 2022. Shin WooJin. All Rights Reserved.</span>
             </p>
