--- a/html/int.html
+++ b/html/int.html
@@ -6,7 +6,7 @@
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="stylesheet" type="text/css" href="../css/홀리워크_십자가.style.css">
+        <link rel="stylesheet" type="text/css" href="../css/int.style.css">
     </head>
     <body>
         <div class="header">
@@ -28,8 +28,8 @@
                     </li>
                     <li class="menu_1"><a href="#">창의활동</a>
                         <ul class="sub_menu_1">
-                            <li><a href="../html/syntaxError().html">syntax error()</a></li>
-                            <li><a href="../html/병천독립운동.html">병천 독립운동거리 조성</a></li>
+                            <li><a href="#">syntax error()</a></li>
+                            <li><a href="#">병천 독립운동거리 조성</a></li>
                         </ul>
                     </li>
                     <li class="menu_1"><a href="#">이색활동</a>
@@ -42,46 +42,27 @@
         </div>
         <div class="main_text">
             <div class="head">
-                <h3>제작 과정</h3>
-                <a href="../html/홀리워크.html">뒤로가기</a>
+                <h3>인트라넷</h3>
+                <a href="../html/web_mannager.html">뒤로가기</a>
             </div>
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="50000">
-                    <img src="../photo/IMG_4652.jpeg" class="d-block w-100" alt="...">
+                    <img src="../photo/인트라넷.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <p>1. 나무를 구매해 껍질을 벗기고 말린다.</p>
+                      <p>1. 보류.</p>
+                      <p><a href="https://app.sketchup.com/share/tc/asia/iQTdkQnhNs8stoken=3hJQkiO5P108wcNYvDi-q-5SgHS7QwP787FQZ8DqqlvADTU_91Ip-23aF5-5MJJ8&source=web"  target='_blank' class="linkPage">보류</a></p>
                     </div>
                   </div>
                   <div class="carousel-item" data-bs-interval="50000">
-                    <img src="../photo/십자가센딩.jpg" class="d-block w-100" alt="...">
+                    <img src="../photo/인트라넷.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <p>2. 샌더로 표면을 부드럽게 만든다.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="50000">
-                    <img src="../photo/엑스 결합.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <p>3. 나무 2개를 십자가 모양으로 결합한다.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="50000">
-                    <img src="../photo/나무구멍.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <p>4. 밑동에 구멍을 판다.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="50000">
-                    <img src="../photo/나무결합.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <p>5. 두 나무를 결합한다</p>
+                      <p>2. 보류.</p>
+                      <p><a class="linkPage" href="https://docs.google.com/document/d/1cf_DfXXsCzJDzIsH9f2KD-7Sg15pzcteiXbb7Lt49BE/edit?usp=sharing" target='_blank'>보류</a></p>
                     </div>
                   </div>
                 </div>
@@ -94,15 +75,10 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <div class="bottom_nav">
-                <p><a href="../html/홀리워크.html">뒤로가기</a></p>
-                <p><a href="../html/홀리워크_우드슬렙.html">우드슬랩</a></p>
-                <p><a href="../html/홀리워크_야외화덕.html">야외 화덕</a></p>
-            </div>
         </div>
         <footer>
             <p>
-                <br/><span>저자 : Shin WooJin</span><br/>
+                <br/><br/><span>저자 : Shin WooJin</span><br/>
                 <span>이메일 : tls36tls@gmail.com</span><br/>
                 <span>Copyright 2022. Shin WooJin. All Rights Reserved.</span>
             </p>
