--- a/html/web_mannager.html
+++ b/html/web_mannager.html
@@ -13,16 +13,16 @@
                 <ul class="allmenu">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
-                    <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
+                    <li class="menu_1"><a href="#">선택활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
                             <li><a href="../html/web_mannager.html">22-2 A:Web Manager</a></li>
                             <li><a href="../html/홀리워크.html">22-1 B:홀리워크</a></li>
-                            <li><a href="#">22-2 B:End Poverty</a></li>
-                            <li><a href="#">22-2 C:Active Biblical Geology</a></li>
+                            <li><a href="../html/End_poverty.html">22-2 B:End Poverty</a></li>
+                            <li><a href="../html/Active.html">22-2 C:Active Biblical Geology</a></li>
                         </ul>
                     </li>
-                    <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
+                    <li class="menu_1"><a href="#">창의활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="#">syntax error()</a></li>
                             <li><a href="#">병천 독립운동거리 조성</a></li>
@@ -37,7 +37,23 @@
             </div>
         </div>
         <div class="main_text">
-
+            <div class="intro_img">
+                <h2>Web Manager</h2>
+            </div>
+            <div class="intro">
+                <h3>활동 개요</h3>
+                <p>현대 사회의 주요 소통매체는 대부분 Web을 기반으로 한다. Web Sites 제작을 통해 웹의 특성을 이해하고, 웹기획, 개발, 디자인 등의 영역으로 나누어 팀프로젝트를 진행하며 웹제작을 위한 팀워크를 훈련한다. 주요 프로젝트로는 개인 프로필 사이트 제작 및 학교 홈페이지, 인트라넷 제작 등이 있다.</p>
+            </div>
+            <h3>활동 내용</h3>
+            <div class="created">
+                <div>
+                    <p class="img_text"><a href="https://sites.google.com/dreamyedu.net/school/"  target='_blank'>학교 홈페이지</a></p>
+                </div>
+                <div>
+                    <p class="img_text"><a href="../html/int.html">인트라넷</a></p>
+                </div>
+            </div>
+            
         </div>
         <footer>
             <p>
