--- a/html/홀리워크.html
+++ b/html/홀리워크.html
@@ -14,16 +14,16 @@
                 <ul class="allmenu">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
-                    <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
+                    <li class="menu_1"><a href="#">선택활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
                             <li><a href="../html/web_mannager.html">22-2 A:Web Manager</a></li>
                             <li><a href="#">22-1 B:홀리워크</a></li>
-                            <li><a href="#">22-2 B:End Poverty</a></li>
-                            <li><a href="#">22-2 C:Active Biblical Geology</a></li>
+                            <li><a href="../html/End_poverty.html">22-2 B:End Poverty</a></li>
+                            <li><a href="../html/Active.html">22-2 C:Active Biblical Geology</a></li>
                         </ul>
                     </li>
-                    <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
+                    <li class="menu_1"><a href="#">창의활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/syntaxError().html">syntax error()</a></li>
                             <li><a href="../html/병천독립운동.html">병천 독립운동거리 조성</a></li>
