--- a/html/홀리워크_우드슬렙.html
+++ b/html/홀리워크_우드슬렙.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="../css/main.css">
         <link rel="stylesheet" type="text/css" href="../css/홀리워크_우드슬렙.style.css">
     </head>
@@ -13,16 +17,16 @@
                 <ul class="allmenu">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../html/about.html">About me</a></li>
-                    <li class="menu_1"><a href="../html/선택활동.html">선택활동</a>
+                    <li class="menu_1"><a href="#">선택활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/change_maker.html">22-1 A:Change Maker</a></li>
                             <li><a href="../html/web_mannager.html">22-2 A:Web Manager</a></li>
                             <li><a href="../html/홀리워크.html">22-1 B:홀리워크</a></li>
-                            <li><a href="#">22-2 B:End Poverty</a></li>
-                            <li><a href="#">22-2 C:Active Biblical Geology</a></li>
+                            <li><a href="../html/End_poverty.html">22-2 B:End Poverty</a></li>
+                            <li><a href="../html/Active.html">22-2 C:Active Biblical Geology</a></li>
                         </ul>
                     </li>
-                    <li class="menu_1"><a href="../html/창의활동.html">창의활동</a>
+                    <li class="menu_1"><a href="#">창의활동</a>
                         <ul class="sub_menu_1">
                             <li><a href="../html/syntaxError().html">syntax error()</a></li>
                             <li><a href="../html/병천독립운동.html">병천 독립운동거리 조성</a></li>
@@ -41,32 +45,63 @@
                 <h3>제작 과정</h3>
                 <a href="../html/홀리워크.html">뒤로가기</a>
             </div>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="50000">
+                    <img src="../photo/우드껍질.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>1. 나무를 구매해 껍질을 벗기고 말린다.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="50000">
+                    <img src="../photo/우드대패.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>2. 대패를 사용해 표면을 평평하게 만든다.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="50000">
+                    <img src="../photo/우드센딩.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>3. 센더를 이용해 표면을 매끄럽게 만든다.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="50000">
+                    <img src="../photo/레진.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>4. 나무의 빈 부분에 레진을 채운다.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="50000">
+                    <img src="../photo/우드오일.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>5. 모노코트 오일 바르고 말린다.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="50000">
+                    <img src="../photo/완성.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>6. 다리 결합한다.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
             <div class="all_process">
-                <div class="process">
-                    <img src="../photo/우드껍질.jpg" class="process_img">
-                    <p class="process_text">1. 나무를 구매해 껍질을 벗기고 말린다.</p>
-                </div>
-                <div class="process">
-                    <img src="../photo/우드대패.jpg" class="process_img">
-                    <p class="process_text">2. 대패를 사용해 표면을 평평하게 만든다.</p>
-                </div>
-                <div class="process">
-                    <img src="../photo/우드센딩.png" class="process_img">
-                    <p class="process_text">3. 센더를 이용해 표면을 매끄럽게 만든다.</p>
-                </div>
-                <div class="process">
-                    <img src="../photo/레진.png" class="process_img">
-                    <p class="process_text">4. 나무의 빈 부분에 레진을 채운다.</p>
-                </div>
-                <div class="process">
-                    <img src="../photo/우드오일.jpg" class="process_img">
-                    <p class="process_text">5. 모노코트 오일 바르고 말리기.</p>
-                </div>
-                <div>
-                <div class="process">
-                    <img src="../photo/완성.png" class="process_img">
-                    <p class="process_text">5. 다리 결합.</p>
-                </div>
                 <div class="bottom_nav">
                     <p><a href="../html/홀리워크_십자가.html">십자가</a></p>
                     <p><a href="../html/홀리워크.html">뒤로가기</a></p>
@@ -76,7 +111,7 @@
         </div>
         <footer>
             <p>
-                <br/><br/><span>저자 : Shin WooJin</span><br/>
+                <br/><span>저자 : Shin WooJin</span><br/>
                 <span>이메일 : tls36tls@gmail.com</span><br/>
                 <span>Copyright 2022. Shin WooJin. All Rights Reserved.</span>
             </p>
