--- a/html/홀리워크_야외화덕.html
+++ b/html/홀리워크_야외화덕.html
@@ -76,7 +76,7 @@
                     </div>
                   </div>
                   <div class="carousel-item" data-bs-interval="50000">
-                    <img src="../photo/주변 정리.jpg" class="d-block w-100" alt="...">
+                    <img src="../photo/tidy up.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <p>4. 주변을 정리하고 파쇄석을 깐다.</p>
                     </div>
